--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<p>!!!</p>
+<div class="container color-dark">
+  <!--<div class="col">
+    <p>Add your announcement</p>
+  </div>-->
+  <div class="col">
+    <p>All announcements ({{itemCount}})</p>
+  </div>
+</div>
+
+<!--<div class="container color-light" [@goals]="goals.length">
+  <div class="col">
+    <form>
+      <input type="text" class="txt" name="item" placeholder="Your announcement" [(ngModel)]="goalText">
+      <input type="submit" class="btn" [value]="btnText" (click)="addItem()">
+    </form>
+  </div>
+  <div class="col">
+    <p class="life-container" *ngFor="let goal of goals; let i = index">
+      {{ goal }}
+    </p>
+  </div>
+
+</div>-->
