--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,32 +1,36 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-
-  position: fixed;
-  top: 0;
-  width: 100%;
+.container {
+  display: grid;
+  grid-template-columns: 50% auto;
+}
+.col {
+  padding: .4em 1.3em;
+}
+.color-dark {
+  background: #E1E190;
+}
+.color-light {
+  background: #FAFAA1;
 }
 
-li {
-  float: left;
+input.txt {
+  border: 0;
+  padding: 1em;
+  width: 80%;
+  margin-bottom: 2em;
+}
+input.btn {
+  border: 0;
+  display:block;
+  padding:1em 3em;
+  background:#A5F883;
+  color:#003A61;
+  margin-bottom:1em;
+  cursor:pointer;
+}
+.life-container {
+  background:#DCFFB7;
+  padding:.5em;
+  font-weight:bold;
+  cursor:pointer;
 }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color: #111;
-}
-
-.active {
-  background-color: #4CAF50;
-}
