--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="container color-dark">
-  <!--<div class="col">
+  <div class="col">
     <p>Add your announcement</p>
-  </div>-->
+  </div>
   <div class="col">
     <p>All announcements ({{itemCount}})</p>
   </div>
 </div>
 
-<!--<div class="container color-light" [@goals]="goals.length">
+<div class="container color-light" [@goals]="goals.length">
   <div class="col">
     <form>
       <input type="text" class="txt" name="item" placeholder="Your announcement" [(ngModel)]="goalText">
@@ -20,4 +20,4 @@
     </p>
   </div>
 
-</div>-->
+</div>
