--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,16 @@
 <div class="container color-dark">
   <div class="col">
-    <p>Add your announcement</p>
+    <p>Add your instruction</p>
   </div>
   <div class="col">
-    <p>All announcements ({{itemCount}})</p>
+    <p>All instructions ({{itemCount}})</p>
   </div>
 </div>
 
 <div class="container color-light" [@goals]="goals.length">
   <div class="col">
     <form>
-      <input type="text" class="txt" name="item" placeholder="Your announcement" [(ngModel)]="goalText">
+      <input type="text" class="txt" name="item" placeholder="Your instruction" [(ngModel)]="goalText">
       <input type="submit" class="btn" [value]="btnText" (click)="addItem()">
     </form>
   </div>
